[package]
name = "ltls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-formal-verification = { git = "https://github.com/TechnionFV/rust-formal-verification.git", rev = "79b1917ec63049ad066ca13215ab23bffdf2065a" }